# agent-army

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  SECRETARY.md  install.py  requirements.txt  run_singer_pipeline.py  setup.py
.claude/: settings.json
agentforge/: README.md  install-agentforge.bat  pyproject.toml
agentforge/agentforge/: __init__.py  __main__.py
agentforge/agentforge/cli/: __init__.py  init_cmd.py  list_cmd.py  main.py  run_cmd.py  setup_cmd.py  status_cmd.py  telegram_cmd.py
agentforge/agentforge/core/: __init__.py  engine.py  failure.py  task_tracker.py
agentforge/agentforge/llm/: __init__.py  budget.py  router.py
agentforge/agentforge/schema/: __init__.py  agent_def.py  config.py  validator.py
agentforge/agentforge/setup/: __init__.py  config_writer.py  credential.py  detector.py  gui_wizard.py  wizard.py
agentforge/agentforge/steps/: __init__.py  base.py  llm_step.py  save_step.py  shell_step.py
agentforge/agentforge/telegram/: __init__.py  auth.py  bot.py  formatter.py  handlers.py
agentforge/agentforge/templates/: agentforge.yaml  code-reviewer.yaml  data-processor.yaml  example.yaml
agentforge/agentforge/utils/: __init__.py  display.py  template.py
agentforge/docs/: EASY_INSTALL.md  USER_MANUAL.md
agentforge/tests/: __init__.py  conftest.py
agentforge/tests/cli/: __init__.py  test_init_cmd.py  test_list_cmd.py  test_run_cmd.py  test_status_cmd.py
agentforge/tests/core/: __init__.py  test_engine.py  test_failure.py  test_task_tracker.py
agentforge/tests/e2e/: __init__.py  test_cli_e2e.py  test_full_workflow.py
(+432 files in other folders)
